GNOME Bugzilla – Bug 695475
h264parser: Fix the return value type for the SEI palyload parsing methods.
Last modified: 2013-07-01 10:56:54 UTC
Created attachment 238438 [details] [review] h264parser: Fix the return value type for the SEI palyload parsing methods. h264parser: Fix the return value type for the SEI palyload parsing methods.
ping?
commit 65758debf1eead6028f0b22a13d7965d44c0f731 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Sat Mar 9 01:49:23 2013 +0200 h264parser: Fix the return value type for the SEI palyload parsing methods. The return value type of SEI payload parsing functions are GstH264ParserResult. https://bugzilla.gnome.org/show_bug.cgi?id=695475